ingress-electricity-prediction.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: electricity-prediction-ingress
spec:
  rules:
    - host: electricity.prediction.vbo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: electricity-prediction
                port:
                  number: 8001
